tests/src/frontend/typechecking/invalid/tunder_generic_5.sk
base class Foo<T>
class Bar() extends Foo<Int>

fun get_bar(): Foo<_> {
  Bar()
}
